--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script src="https://www.gstatic.com/firebasejs/4.1.4/firebase.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-    <title>React App</title>
+    <title>Travel Mapper</title>
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      Sorry, you need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
   </body>
